# linty

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  capsule.html  index.html  package.json  vite.config.ts
.claude/skills/backlog/: SKILL.md
.claude/skills/code-optimizer/: SKILL.md
.claude/skills/debug/: SKILL.md
.claude/skills/evaluate/: SKILL.md
.claude/skills/pr-merge/: SKILL.md
.claude/skills/pr-resolve/: SKILL.md
.claude/skills/pr-review/: SKILL.md
.claude/skills/rca/: SKILL.md
.claude/skills/ship/: SKILL.md
.github/workflows/: build-dmg.yml
docs/: DEV-SETUP.md  TURBO-TRANSCRIPTION.md
scripts/: build-mac.sh
src/: App.tsx  capsule-main.tsx
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  capsule.rs  clipboard.rs  fnkey.rs  lib.rs  main.rs  paste.rs  permissions.rs  state.rs  transcribe.rs  tray.rs  watchdog.rs
src/components/: CapsulePanel.component.tsx  ModelDownload.component.tsx  PermissionCheck.component.tsx  RecorderView.component.tsx  RecordingIndicator.component.tsx  SettingsView.component.tsx  TranscriptionResult.component.tsx  WaveformVisualizer.component.tsx
src/components/layout/: Sidebar.component.tsx  StatusBar.component.tsx
src/components/shared/: ConfirmReset.dialogue.tsx  EmptyState.component.tsx  SegmentedControl.component.tsx  SettingsLayout.component.tsx  ToastContainer.component.tsx  Toggle.component.tsx  TranscriptActions.component.tsx  TranscriptRow.component.tsx
src/hooks/: useGlobalHotkey.hook.ts  useHistory.hook.ts  useModelAutoLoad.hook.ts  useModelDownload.hook.ts  useRecording.hook.ts  useSettings.hook.ts  useTheme.hook.ts  useToast.hook.ts  useTranscription.hook.ts  useTraySync.hook.ts  useUpdater.hook.ts
src/pages/: About.page.tsx  Dashboard.page.tsx  History.page.tsx  Onboarding.page.tsx  Settings.page.tsx  Shortcuts.page.tsx  SystemCheck.page.tsx
src/services/: correction.service.ts  paste.service.ts  permissions.service.ts
src/store/: app.store.ts
src/store/slices/: history.slice.ts  navigation.slice.ts  recording.slice.ts  settings.slice.ts  toast.slice.ts  transcription.slice.ts  updater.slice.ts
src/styles/: capsule.css  globals.css
src/types/: transcript.types.ts
website/: README.md  docusaurus.config.ts  index.html  main.js  package.json  styles.css
website/src/components/: FAQ.component.tsx  Features.component.tsx  FinalCTA.component.tsx  Footer.component.tsx  Hero.component.tsx  HowItWorks.component.tsx  LanguageShowcase.component.tsx  Pricing.component.tsx  SocialProof.component.tsx  Testimonials.component.tsx
website/src/css/: custom.css
website/src/pages/: index.tsx  login.tsx  signup.tsx
