[package]
name = "voiceink"
version = "0.1.0"
description = "Voice-to-text with global hotkey"
authors = ["you"]
edition = "2021"

[lib]
name = "voiceink_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
enigo = "0.2"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# Local STT (behind feature flag — long compile with Metal)
whisper-rs = { version = "0.15", features = ["metal"], optional = true }
hound = { version = "3.5", optional = true }

[features]
custom-protocol = ["tauri/custom-protocol"]
local-stt = ["whisper-rs", "hound"]
